; ModuleID = '/home/carl/AnghaBench/redis/src/extr_replication.c_replicationScriptCacheAdd.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_replication.c_replicationScriptCacheAdd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32, i32 }

@server = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@DICT_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @replicationScriptCacheAdd(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %7 = load i32, i32* %2, align 4
  %8 = call i32 @sdsdup(i32 %7)
  store i32 %8, i32* %4, align 4
  %9 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 1), align 8
  %10 = call i64 @listLength(i32 %9)
  %11 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 0), align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %29

13:                                               ; preds = %1
  %14 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 1), align 8
  %15 = call i32* @listLast(i32 %14)
  store i32* %15, i32** %5, align 8
  %16 = load i32*, i32** %5, align 8
  %17 = call i32 @listNodeValue(i32* %16)
  store i32 %17, i32* %6, align 4
  %18 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 2), align 4
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @dictDelete(i32 %18, i32 %19)
  store i32 %20, i32* %3, align 4
  %21 = load i32, i32* %3, align 4
  %22 = load i32, i32* @DICT_OK, align 4
  %23 = icmp eq i32 %21, %22
  %24 = zext i1 %23 to i32
  %25 = call i32 @serverAssert(i32 %24)
  %26 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 1), align 8
  %27 = load i32*, i32** %5, align 8
  %28 = call i32 @listDelNode(i32 %26, i32* %27)
  br label %29

29:                                               ; preds = %13, %1
  %30 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 2), align 4
  %31 = load i32, i32* %4, align 4
  %32 = call i32 @dictAdd(i32 %30, i32 %31, i32* null)
  store i32 %32, i32* %3, align 4
  %33 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 1), align 8
  %34 = load i32, i32* %4, align 4
  %35 = call i32 @listAddNodeHead(i32 %33, i32 %34)
  %36 = load i32, i32* %3, align 4
  %37 = load i32, i32* @DICT_OK, align 4
  %38 = icmp eq i32 %36, %37
  %39 = zext i1 %38 to i32
  %40 = call i32 @serverAssert(i32 %39)
  ret void
}

declare dso_local i32 @sdsdup(i32) #1

declare dso_local i64 @listLength(i32) #1

declare dso_local i32* @listLast(i32) #1

declare dso_local i32 @listNodeValue(i32*) #1

declare dso_local i32 @dictDelete(i32, i32) #1

declare dso_local i32 @serverAssert(i32) #1

declare dso_local i32 @listDelNode(i32, i32*) #1

declare dso_local i32 @dictAdd(i32, i32, i32*) #1

declare dso_local i32 @listAddNodeHead(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
